# DjangoAppTemplate

./: README.rst  cookiecutter.json  pyproject.toml
My Awesome Project/: README.rst  pyproject.toml
My Awesome Project/config/: settings.py  urls.py
My Awesome Project/docs/: conf.py  index.rst
My Awesome Project/my_awesome_project/: apps.py
config/: settings.py  urls.py
docs/: changelog.rst  introduction.rst
{{ cookiecutter.project_name }}/: LICENSE  README.rst  pyproject.toml
{{ cookiecutter.project_name }}/config/: settings.py  urls.py
{{ cookiecutter.project_name }}/docs/: getting_started.rst
{{ cookiecutter.project_name }}/{{cookiecutter.project_slug}}/: apps.py
