[tool.poetry]
name = "cookiecutter-django-app"
version = "0.1.0"
description = "Simple cookiecutter Django App"
authors = ["hypsug0 <fcloitre@dbchiro.org>"]
license = "AGPLv3"

[tool.poetry.dependencies]
python = "^3.7"
cookiecutter = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
